--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     Welcome to Zero to Pro Level-4 Batch-13
-    Hi Hi Hig
+    <a href="a1/index.html" target="_blank" rel="noopener noreferrer">Assigment-1</a>
+    a
 </body>
 </html>
